-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8, 11
-
Component/s: hotspot
-
b12
When one or more of the paths in the sun.boot.library.path property are longer than JVM_MAXPATHLEN, both this path and all other paths are ignored.
The correct behaviour, as determined via community consultation, should be for the VM to fail immediately with a useful message.
Also, in fixing this issue, I also added a modifier for the length of the path, so that any additional characters (sub path, file name, etc) are be taken into consideration when determining if the path is too long.
Test case is included in the webrev.
http://cr.openjdk.java.net/~afarley/8227021.6/webrev/
The correct behaviour, as determined via community consultation, should be for the VM to fail immediately with a useful message.
Also, in fixing this issue, I also added a modifier for the length of the path, so that any additional characters (sub path, file name, etc) are be taken into consideration when determining if the path is too long.
Test case is included in the webrev.
http://cr.openjdk.java.net/~afarley/8227021.6/webrev/