8227021: VM fails if any sun.boot.library.path paths are longer than JVM_MAXPATHLEN

The size of each path in sun.boot.library.path property should not exceed JVM_MAXPATHLEN

Reviewed-by: dholmes, coleenp, sspitsyn